Updated ts configuration

--- a/src/index.tpl.ejs
+++ b/src/index.tpl.ejs
@@ -32,7 +32,9 @@
 
 <body>
   <!-- Add you application specific view Here-->
-  <app-root>Loading.....</app-root>
+  <div class="container-fluid">
+    <app-root>Loading.....</app-root>
+  </div>
 
   <!-- Add you application specific view Here End-->
 
