--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,33 @@
-<h1>{{title}}</h1>
-<h2>Application Components HTML</h2>
+<h1 class="scss">{{ title }}</h1>
+<h2>Application Components HTML ssss</h2>
+<div class="row">
+    <div class="col-4">.col-4</div>
+    <div class="col-4">.col-4</div>
+    <div class="col-4">.col-4</div>
+</div>
+<h1>Hello New</h1>
+<div class="row">
+    <div class="col-sm-4">.col-sm-4</div>
+    <div class="col-sm-4">.col-sm-4</div>
+    <div class="col-sm-4">.col-sm-4</div>
+</div>ddd
+
+<div class="row">
+    <div class="col-md-4">.col-md-4</div>
+    <div class="col-md-4">.col-md-4</div>
+    <div class="col-md-4">.col-md-4</div>
+</div>
+
+<div class="row">
+    <div class="col-lg-4">.col-lg-4</div>
+    <div class="col-lg-4">.col-lg-4</div>
+    <div class="col-lg-4">.col-lg-4</div>
+</div>
+
+<div class="row">
+    <div class="col-xl-4">.col-xl-4</div>
+    <div class="col-xl-4">.col-xl-4</div>
+    <div class="col-xl-4">.col-xl-4</div>
+</div>
 <router-outlet></router-outlet>
+Hello
