--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
-/* AppComponent's private SCSS styles */
 h1.scss {
   font-size: 1.2em;
   color: #999;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 h2 {
