--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,7 @@
     <div class="col-4">.col-4</div>
 </div>
 
-<h1>Hello Newffff</h1>
-
+<h1>Hello New</h1>
 <div class="row">
     <div class="col-sm-4">.col-sm-4</div>
     <div class="col-sm-4">.col-sm-4</div>
