--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 /* AppComponent's private CSS styles */
 h1 {
     font-size: 1.2em;
-    color: green;
+    color: red;
     margin-bottom: 0;
 }
 
