--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1 class="scss">{{ title }}</h1>
-<h2>Application Components HTML hello world well well</h2>
+<h2>Application Components HTML hello world well well oned</h2>
 <div class="row">
     <div class="col-4">.col-4</div>
     <div class="col-4">.col-4</div>
