--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 /* AppComponent's private CSS styles */
-h1 {
+h1.css {
     font-size: 1.2em;
-    color: red;
+    color: pink !important;
     margin-bottom: 0;
 }
 
