--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <h1 class="scss">{{ title }}</h1>
-<h2>Application Components HTML hello world well well oned</h2>
+<h2>Application Components HTML hello world well well one+T</h2>
 <div class="row">
     <div class="col-4">.col-4</div>
     <div class="col-4">.col-4</div>
     <div class="col-4">.col-4</div>
 </div>
 
-<h1>Hello New</h1>
+<h1 class="css">Hello New</h1>
 <div class="row">
     <div class="col-sm-4">.col-sm-4</div>
     <div class="col-sm-4">.col-sm-4</div>
@@ -31,5 +31,14 @@ ddd
     <div class="col-xl-4">.col-xl-4</div>
     <div class="col-xl-4">.col-xl-4</div>
 </div>
+<div style="font-size: 0.5rem;">
+    <i class="fas fa-heart fa-xs"></i>
+    <i class="fas fa-heart fa-sm"></i>
+    <i class="fas fa-heart fa-lg"></i>
+    <i class="fas fa-heart fa-2x"></i>
+    <i class="fas fa-heart fa-3x"></i>
+    <i class="fas fa-heart fa-5x"></i>
+    <i class="fas fa-heart fa-7x"></i>
+    <i class="fas fa-heart fa-10x"></i>
+</div>
 <router-outlet></router-outlet>
-Hello
