--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 /* AppComponent's private CSS styles */
 h1.css {
     font-size: 1.2em;
-    color: pink !important;
+    color: magenta !important;
     margin-bottom: 0;
 }
 
