--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
     <div class="col-4">.col-4</div>
 </div>
 
-<h1 class="css">Hello New</h1>
+<h1 class="css">Hello New New</h1>
 <div class="row">
-    <div class="col-sm-4">.col-sm-4</div>
+    <div class="col-sm-4 global-css">.col-sm-4</div>
     <div class="col-sm-4">.col-sm-4</div>
     <div class="col-sm-4">.col-sm-4</div>
 </div>
