--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 h1.scss {
     font-size: 1.2em;
-    color: red !important;
+    color: green !important;
     margin-bottom: 0;
     margin-top: 0;
 }
