--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 $roboto-font-path: "assets/font/roboto/";
-$fa-font-path: "assets/font/";
+$fa-font-path: "assets/font";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/solid";
