--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <h1 class="css">Hello New New</h1>
 <div class="row">
     <div class="col-sm-4 global-css">.col-sm-4</div>
-    <div class="col-sm-4">.col-sm-4</div>
+    <div class="col-sm-4 global-scss">.col-sm-4 global-scss</div>
     <div class="col-sm-4">.col-sm-4</div>
 </div>
 ddd
