--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark indigo scrolling-navbar intro-fixed-nav"
         [containerInside]="false">
         <mdb-navbar-brand>
-            <a class="logo navbar-brand" href="#"><strong>Navbar</strong></a>
+            <a class="logo navbar-brand" href="#"><strong>Navbarsss</strong></a>
         </mdb-navbar-brand>
         <links>
             <ul class="navbar-nav mr-auto">
