--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,9 @@
 $default-bg-color: #50f0f0;
 
 header {
-    margin-bottom: 6rem;
+    margin-bottom: 5rem;
+}
+
+body {
+    background-color: red;
 }
