--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,6 +2,7 @@
     <div class="col-md-12">
         <h1 class="scss">{{ title }}</h1>
         <h2>Application Components HTML hello world well well one+T</h2>
+        <img src="/assets/images/043-street-view.png" />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a orci faucibus, venenatis arcu ut,
             ultrices tortor.
             Vestibulum faucibus ligula lectus, non malesuada nisl pulvinar non. Praesent maximus facilisis
