--- a/src/index.tpl.ejs
+++ b/src/index.tpl.ejs
@@ -2,48 +2,49 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
-  <base href="<%=htmlWebpackPlugin.options.data.baseHref%>">
-  <!-- Meta Tags End -->
-  <% var metas = htmlWebpackPlugin.options.data.metas; %>
-  <% metas.forEach(function(meta){ %>
-  <meta name="<%=meta.name%>" content="<%=meta.content%>">
-  <% }); %>
-  <!-- Meta Tags End -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
+    <base href="<%=htmlWebpackPlugin.options.data.baseHref%>">
+    <!-- Meta Tags Start -->
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <% var metas = htmlWebpackPlugin.options.data.metas; %>
+    <% metas.forEach(function(meta){ %>
+    <meta name="<%=meta.name%>" content="<%=meta.content%>">
+    <% }); %>
+    <!-- Meta Tags End -->
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- Leave those next 4 lines if you care about users using IE8 -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- Leave those next 4 lines if you care about users using IE8 -->
+    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  <!-- External Stylesheet files -->
-  <% var links = htmlWebpackPlugin.options.data.links; %>
-  <% links.forEach(function(link) { if(link.href.indexOf('.css') !== -1) { %>
-  <link href='<%=link.href%>' rel='<%=link.rel%>' type="<%=link.type%>" />
-  <% }}); %>
-  <!-- External Stylesheet files End -->
+    <!-- External Stylesheet files -->
+    <% var links = htmlWebpackPlugin.options.data.links; %>
+    <% links.forEach(function(link) { if(link.href.indexOf('.css') !== -1) { %>
+    <link href='<%=link.href%>' rel='<%=link.rel%>' type="<%=link.type%>" />
+    <% }}); %>
+    <!-- External Stylesheet files End -->
 </head>
 
 <body>
-  <!-- Add you application specific view Here-->
-  <div class="container-fluid">
-    <app-root>Loading.....</app-root>
-  </div>
+    <!-- Add you application specific view Here-->
+    <div class="container-fluid">
+        <app-root>Loading.....</app-root>
+    </div>
 
-  <!-- Add you application specific view Here End-->
+    <!-- Add you application specific view Here End-->
 
-  <!-- External Javascript files -->
-  <% var jsScript = htmlWebpackPlugin.options.data.js; %>
-  <% jsScript.forEach(function(script) { if(script.indexOf('.js') !== -1){ %>
-  <script src='<%=script%>'></script>
-  <% }}); %>
-  <!-- External Javascript files End -->
+    <!-- External Javascript files -->
+    <% var jsScript = htmlWebpackPlugin.options.data.js; %>
+    <% jsScript.forEach(function(script) { if(script.indexOf('.js') !== -1){ %>
+    <script src='<%=script%>'></script>
+    <% }}); %>
+    <!-- External Javascript files End -->
 </body>
 
 </html>
